feat(web): channel-stats component styling

--- a/web/src/app/components/channel-stats-chart/_channel-stats-chart-theme.scss
+++ b/web/src/app/components/channel-stats-chart/_channel-stats-chart-theme.scss
@@ -5,13 +5,8 @@
   $foreground: map-get($theme, "foreground");
 
   .channel-stats-chart {
-    color: mat-color($foreground, "secondary-text");
-  }
-}
-
-@mixin channel-stats-chart-typography($config) {
-  .channel-stats-chart {
-    font-size: mat-font-size($config, "body-2");
-    font-weight: mat-font-weight($config, "body-2");
+    .title {
+      color: mat-color($foreground, "secondary-text");
+    }
   }
 }
