--- a/web/src/app/components/channel-stats/channel-stats.html
+++ b/web/src/app/components/channel-stats/channel-stats.html
@@ -1,11 +1,49 @@
-<hs-vtuber-summary
-  [vtuber]="vtuber"
-  [channels]="channels"
-  [loading]="loading"
-></hs-vtuber-summary>
+<div class="vtuber-summary">
+  <div class="info">
+    <img class="profile" src="/assets/profiles/{{ vtuber.id }}.jpg" />
+  </div>
+
+  <div class="meta">
+    <div class="name">{{ vtuber.id | name }}</div>
+
+    <div class="icons">
+      <a
+        *ngIf="vtuber.youtube"
+        target="_blank"
+        href="https://www.youtube.com/channel/{{ vtuber.youtube }}"
+      >
+        <mat-icon svgIcon="youtube"></mat-icon>
+      </a>
+
+      <a
+        *ngIf="vtuber.twitter"
+        target="_blank"
+        href="https://twitter.com/{{ vtuber.twitter }}"
+      >
+        <mat-icon svgIcon="twitter"></mat-icon>
+      </a>
+
+      <a
+        *ngIf="vtuber.bilibili"
+        target="_blank"
+        href="https://space.bilibili.com/{{ vtuber.bilibili }}"
+      >
+        <mat-icon svgIcon="bilibili"></mat-icon>
+      </a>
+    </div>
+  </div>
+</div>
 
 <div class="chart-container">
-  <div class="chart" *ngFor="let report of reports">
-    <hs-channel-stats-chart [report]="report"></hs-channel-stats-chart>
+  <div class="toolbar">
+    <span class="spacer"></span>
+    <button mat-icon-button (click)="changeRange(1)">1d</button>
+    <button mat-icon-button (click)="changeRange(3)">3d</button>
+    <button mat-icon-button (click)="changeRange(7)">7d</button>
   </div>
+
+  <hs-channel-stats-chart
+    *ngFor="let report of reports"
+    [report]="report"
+  ></hs-channel-stats-chart>
 </div>
