feat(web): vtuber-summary theming

--- a/web/src/app/components/channel-stats/_channel-stats-theme.scss
+++ b/web/src/app/components/channel-stats/_channel-stats-theme.scss
@@ -3,10 +3,27 @@
 @mixin channel-stats-theme($theme) {
   $background: map-get($theme, "background");
   $foreground: map-get($theme, "foreground");
+  $is-dark-theme: map-get($theme, "is-dark");
 
   .chart-container {
     .toolbar {
       color: mat-color($foreground, "secondary-text");
+    }
+  }
+
+  $background-shadow: if(
+    $is-dark-theme,
+    rgba(255, 255, 255, 0.1),
+    rgba(0, 0, 0, 0.1)
+  );
+
+  .vtuber-summary {
+    .mat-icon {
+      color: mat-color($foreground, "secondary-text");
+    }
+
+    .profile {
+      background-color: $background-shadow;
     }
   }
 }
@@ -16,6 +33,13 @@
     .toolbar {
       font-size: mat-font-size($config, "body-2");
       font-weight: mat-font-weight($config, "body-2");
+    }
+  }
+
+  .vtuber-summary {
+    .name {
+      font-size: mat-font-size($config, "title");
+      font-weight: mat-font-weight($config, "title");
     }
   }
 }
