--- a/web/src/app/pages/vtubers-detail/vtubers-detail.html
+++ b/web/src/app/pages/vtubers-detail/vtubers-detail.html
@@ -34,9 +34,9 @@
 
       <ng-template #shimmerList>
         <hs-stream-list>
-          <hs-shimmer-stream-item
+          <hs-stream-item-shimmer
             *ngFor="let stream of [1, 2, 3, 4, 5]"
-          ></hs-shimmer-stream-item>
+          ></hs-stream-item-shimmer>
         </hs-stream-list>
       </ng-template>
 
