--- a/web/src/app/pages/streams-detail/streams-detail.html
+++ b/web/src/app/pages/streams-detail/streams-detail.html
@@ -1,7 +1,15 @@
 <div class="mx-auto max-w-960">
-  <hs-stream-summary [stream]="stream" [loading]="loading"></hs-stream-summary>
+  <ng-container *ngIf="!loading; else shimmer">
+    <hs-stream-summary [stream]="stream"></hs-stream-summary>
 
-  <div class="chart" *ngFor="let report of reports">
-    <hs-stream-stats-chart [report]="report"> </hs-stream-stats-chart>
-  </div>
+    <div class="chart" *ngFor="let report of reports">
+      <hs-stream-stats-chart [report]="report"> </hs-stream-stats-chart>
+    </div>
+  </ng-container>
+
+  <ng-template #shimmer>
+    <hs-stream-summary-shimmer></hs-stream-summary-shimmer>
+
+    <hs-stream-stats-chart-shimmer></hs-stream-stats-chart-shimmer>
+  </ng-template>
 </div>
