--- a/web/src/app/pages/youtube-schedule-stream/youtube-schedule-stream.html
+++ b/web/src/app/pages/youtube-schedule-stream/youtube-schedule-stream.html
@@ -31,9 +31,9 @@
       </hs-sub-menu>
 
       <hs-stream-list>
-        <hs-shimmer-stream-item
+        <hs-stream-item-shimmer
           *ngFor="let stream of [1, 2, 3, 4, 5]"
-        ></hs-shimmer-stream-item>
+        ></hs-stream-item-shimmer>
       </hs-stream-list>
     </ng-container>
   </ng-template>
