--- a/web/src/app/pages/youtube-schedule-stream/youtube-schedule-stream.html
+++ b/web/src/app/pages/youtube-schedule-stream/youtube-schedule-stream.html
@@ -1,4 +1,4 @@
-<div class="mx-auto max-w-960" *ngIf="data$ | async as list">
+<div class="youtube-schedule-stream" *ngIf="data$ | async as list">
   <hs-sub-menu>
     <hs-sub-menu-extra>
       <time
