--- a/web/src/app/components/channel-stats/channel-stats.html
+++ b/web/src/app/components/channel-stats/channel-stats.html
@@ -30,6 +30,14 @@
       >
         <mat-icon svgIcon="bilibili"></mat-icon>
       </a>
+
+      <a
+        *ngIf="vtuber.discord"
+        target="_blank"
+        href="https://discord.gg/{{ vtuber.discord }}"
+      >
+        <mat-icon svgIcon="discord"></mat-icon>
+      </a>
     </div>
   </div>
 </div>
