[TaiwanV] Add facebook icon and link. SVG come from en.facebookbrand.com

--- a/web/src/app/components/channel-stats/channel-stats.html
+++ b/web/src/app/components/channel-stats/channel-stats.html
@@ -38,6 +38,14 @@
       >
         <mat-icon svgIcon="discord"></mat-icon>
       </a>
+
+      <a
+        *ngIf="vtuber.facebook"
+        target="_blank"
+        href="https://www.facebook.com/{{ vtuber.facebook }}"
+      >
+        <mat-icon svgIcon="facebook"></mat-icon>
+      </a>
     </div>
   </div>
 </div>
