--- a/web/src/i18n/en.ts.j2
+++ b/web/src/i18n/en.ts.j2
@@ -33,6 +33,7 @@ const translations: Translations = {
   selectLanguage: "Select Language",
   recentStreams: "Recent Streams",
   streamViewers: "Stream Viewers",
+  watchLiveByHolotool: "Watch live streams via Holotools",
 
   // VTubers{% for v in vtubers %}
   {{v.id}}: "{{v.name}}",{% endfor %}
