--- a/web/src/app/pages/youtube-stream/youtube-stream.html
+++ b/web/src/app/pages/youtube-stream/youtube-stream.html
@@ -1,5 +1,16 @@
 <div class="youtube-stream" *ngIf="data$ | async as list">
   <hs-sub-menu>
+    <hs-sub-menu-title>
+      <hs-date-select
+        (selectedChange)="this.onDateRangeChange($event)"
+      ></hs-date-select>
+      <mat-divider
+        *ngIf="displayClear"
+        [vertical]="true"
+        style="display: inline"
+      ></mat-divider>
+      <button *ngIf="displayClear" mat-button (click)="clear()">Clear</button>
+    </hs-sub-menu-title>
     <hs-sub-menu-extra>
       <time
         *ngIf="!list.loading; else shimmer"
@@ -41,7 +52,7 @@
   <hs-loading-spinner
     [hidden]="(list.loading && list.refresh) || list.reachedEnd"
     (reach)="
-      list.loading ? null : loadMore$.next({ refresh: false, last: list.streams[list.streams.length - 1] })
+      list.loading ? null : this.onRechedEnd(list.streams[list.streams.length - 1])
     "
   ></hs-loading-spinner>
 </div>
