feat(web): vtuber selector & filter-group

--- a/web/src/app/components/date-select/date-select.html
+++ b/web/src/app/components/date-select/date-select.html
@@ -15,9 +15,9 @@
   cdkConnectedOverlay
   [cdkConnectedOverlayOrigin]="trigger"
   [cdkConnectedOverlayOpen]="_isOpen"
-  (overlayOutsideClick)="onClose()"
+  (overlayOutsideClick)="onClickOutside($event)"
 >
-  <div class="date-select">
+  <div class="date-select" [@transform]="_isOpen">
     <mat-calendar
       [selected]="_range"
       [comparisonStart]="_range.start"
