--- a/web/src/app/pages/vtubers-detail/vtubers-detail.html
+++ b/web/src/app/pages/vtubers-detail/vtubers-detail.html
@@ -4,8 +4,15 @@
   <ng-container *ngIf="vtuber.youtube">
     <div class="recent-streams" *ngIf="data$ | async as list">
       <hs-sub-menu>
-        <hs-sub-menu-title i18n="@@recentStreams">
-          Recent Streams
+        <hs-sub-menu-title>
+          <span i18n="@@recentStreams">Recent Streams</span>
+
+          <hs-filter-group
+            [displayVTuber]="false"
+            (clear)="onClear()"
+            (dateRangeChanged)="onDateRangeChange($event)"
+          >
+          </hs-filter-group>
         </hs-sub-menu-title>
 
         <hs-sub-menu-extra>
