--- a/web/src/app/components/date-filter/date-filter.html
+++ b/web/src/app/components/date-filter/date-filter.html
@@ -7,8 +7,7 @@
 >
   {{ getBtnText() }}
 
-  <mat-icon *ngIf="!_range.start && !_range.end" svgIcon="chevron_down">
-  </mat-icon>
+  <div *ngIf="!_range.start && !_range.end" class="date-filter-arrow"></div>
 </button>
 
 <ng-template
@@ -17,7 +16,7 @@
   [cdkConnectedOverlayOpen]="_isOpen"
   (overlayOutsideClick)="onClickOutside($event)"
 >
-  <div class="date-select" [@transform]="_isOpen">
+  <div class="date-filter-overlay" [@transform]="_isOpen">
     <mat-calendar
       [selected]="_range"
       [comparisonStart]="_range.start"
