Feature: Add interface of stream stat

--- a/web/src/app/components/channel-table/channel-table.scss
+++ b/web/src/app/components/channel-table/channel-table.scss
@@ -33,6 +33,7 @@
 
   $columns: subscriberCount, dailySubscriberCount, weeklySubscriberCount,
     monthlySubscriberCount, viewCount, dailyViewCount, weeklyViewCount,
+    videoCount, weeklyVideo, weeklyLive, monthlyVideo, monthlyLive,
     monthlyViewCount;
 
   @each $columns in $columns {
