--- a/web/src/app/layout/sidenav/sidenav.html
+++ b/web/src/app/layout/sidenav/sidenav.html
@@ -9,6 +9,15 @@
       <mat-icon mat-list-icon svgIcon="youtube"></mat-icon>
       <p mat-line i18n="@@youtubeChannel">YouTube Channel</p>
     </a>
+    <!--a
+      mat-list-item
+      routerLink="/youtube-channel-ex"
+      routerLinkActive="active"
+      (click)="buttonClick.emit()"
+    >
+      <mat-icon mat-list-icon svgIcon="youtube"></mat-icon>
+      <p mat-line i18n="@@youtubeChannelEX">YouTube Channel EX</p>
+    </a-->
     <a
       mat-list-item
       routerLink="/youtube-stream"
