Feature: Add total video length in stream stat

--- a/web/src/app/components/channel-table/channel-table.scss
+++ b/web/src/app/components/channel-table/channel-table.scss
@@ -34,6 +34,7 @@
   $columns: subscriberCount, dailySubscriberCount, weeklySubscriberCount,
     monthlySubscriberCount, viewCount, dailyViewCount, weeklyViewCount,
     videoCount, weeklyVideo, weeklyLive, monthlyVideo, monthlyLive,
+    weeklyDuration, monthlyDuration,
     monthlyViewCount;
 
   @each $columns in $columns {
