--- a/web/src/app/components/channel-table-ex/channel-table-ex.html
+++ b/web/src/app/components/channel-table-ex/channel-table-ex.html
@@ -59,6 +59,17 @@
     </td>
   </ng-container>
 
+  <ng-container matColumnDef="weeklyDuration">
+    <th mat-header-cell *matHeaderCellDef mat-sort-header i18n="@@weeklyDuration">
+      Total Length of Last 7 Days Videos
+    </th>
+    <td mat-cell *matCellDef="let row" [coloredNumber]="row.weeklyLive"> {{ row.weeklyDuration | interval }}</td>
+    <td mat-footer-cell *matFooterCellDef
+        [coloredNumber]="row.weeklyDuration">
+      {{ getTotal("weeklyDuration") | interval }}
+    </td>
+  </ng-container>
+
   <ng-container matColumnDef="monthlyVideo">
     <th mat-header-cell *matHeaderCellDef mat-sort-header i18n="@@monthlyVideo">
       Videos in Last 30 Days
@@ -80,6 +91,17 @@
     <td mat-footer-cell *matFooterCellDef
         [coloredNumber]="row.monthlyLive">
       {{ getTotal("monthlyLive ") | number }}
+    </td>
+  </ng-container>
+
+  <ng-container matColumnDef="monthlyDuration">
+    <th mat-header-cell *matHeaderCellDef mat-sort-header i18n="@@monthlyDuration">
+      Total Length of Last 7 Days Videos
+    </th>
+    <td mat-cell *matCellDef="let row" [coloredNumber]="row.monthlyDuration"> {{ row.monthlyDuration | interval }}</td>
+    <td mat-footer-cell *matFooterCellDef
+        [coloredNumber]="row.monthlyDuration">
+      {{ getTotal("monthlyDuration") | interval }}
     </td>
   </ng-container>
 
