[TaiwanV] Update template

--- a/server/sql/initial.sql.j2
+++ b/server/sql/initial.sql.j2
@@ -1,2 +1,4 @@
 {% for v in vtubers %}insert into youtube_channels (vtuber_id) values ('{{v.id}}');
 {% endfor %}
+{% for v in vtubers %}insert into youtube_channels_ex (vtuber_id) values ('{{v.id}}');
+{% endfor %}
