--- a/web/src/i18n/en.ts.j2
+++ b/web/src/i18n/en.ts.j2
@@ -34,6 +34,14 @@ const translations: Translations = {
   recentStreams: "Recent Streams",
   streamViewers: "Stream Viewers",
   watchLiveByHolotool: "Watch live streams via Holotools",
+  youtubeChannelEX: "YouTube Stream Stat",
+  videoCount: "Videos",
+  weeklyVideo: "7 Days Shorts",
+  weeklyLive: "7 Days Lives",
+  weeklyDuration: "7 Days Length",
+  monthlyVideo: "30 Days Shorts",
+  monthlyLive: "30 Days Lives",
+  monthlyDuration: "30 Days Length",
 
   // VTubers{% for v in vtubers %}
   {{v.id}}: "{{v.name}}",{% endfor %}
