--- a/web/src/i18n/zh.ts.j2
+++ b/web/src/i18n/zh.ts.j2
@@ -34,6 +34,14 @@ const translations: Translations = {
   recentStreams: "近期直播",
   streamViewers: "直播同接",
   watchLiveByHolotool: "使用 holotools 觀看直播",
+  youtubeChannelEX: "YouTube 頻道影片",
+  videoCount: "影片數",
+  weeklyVideo: "周增短片",
+  weeklyLive: "周增直播",
+  weeklyDuration: "周影片時數",
+  monthlyVideo: "月短片",
+  monthlyLive: "月增直播",
+  monthlyDuration: "月影片時數",
 
   // VTubers{% for v in vtubers %}
   {{v.id}}: "{{v.name}}",{% endfor %}
