--- a/web/src/app/components/channel-table/channel-table.scss
+++ b/web/src/app/components/channel-table/channel-table.scss
@@ -34,8 +34,7 @@
   $columns: subscriberCount, dailySubscriberCount, weeklySubscriberCount,
     monthlySubscriberCount, viewCount, dailyViewCount, weeklyViewCount,
     videoCount, weeklyVideo, weeklyLive, monthlyVideo, monthlyLive,
-    weeklyDuration, monthlyDuration,
-    monthlyViewCount;
+    weeklyDuration, monthlyDuration, monthlyViewCount;
 
   @each $columns in $columns {
     .mat-footer-cell.mat-column-#{$columns},
