[TaiwanV] Update translation

--- a/web/src/app/components/channel-table-ex/channel-table-ex.html
+++ b/web/src/app/components/channel-table-ex/channel-table-ex.html
@@ -4,7 +4,7 @@
   [dataSource]="data"
   [trackBy]="trackBy"
   matSort
-  matSortActive="videoCount"
+  matSortActive="weeklyDuration"
   matSortDirection="desc"
   matSortDisableClear
 >
