--- a/web/src/i18n/zh.ts.j2
+++ b/web/src/i18n/zh.ts.j2
@@ -39,7 +39,7 @@ const translations: Translations = {
   weeklyVideo: "周增短片",
   weeklyLive: "周增直播",
   weeklyDuration: "周影片時數",
-  monthlyVideo: "月短片",
+  monthlyVideo: "月增短片",
   monthlyLive: "月增直播",
   monthlyDuration: "月影片時數",
 
