--- a/web/src/i18n/en.ts.j2
+++ b/web/src/i18n/en.ts.j2
@@ -35,13 +35,13 @@ const translations: Translations = {
   streamViewers: "Stream Viewers",
   watchLiveByHolotool: "Watch live streams via Holotools",
   youtubeChannelEX: "YouTube Stream Stat",
-  videoCount: "Videos",
-  weeklyVideo: "7 Days Shorts",
-  weeklyLive: "7 Days Lives",
-  weeklyDuration: "7 Days Length",
-  monthlyVideo: "30 Days Shorts",
-  monthlyLive: "30 Days Lives",
-  monthlyDuration: "30 Days Length",
+  videoCount: "#Videos",
+  weeklyVideo: "#Shorts in last 7 days",
+  weeklyLive: "#Lives in last 7 days",
+  weeklyDuration: "Total stream time in last 7 days",
+  monthlyVideo: "#Shorts in last 30 days",
+  monthlyLive: "#Lives in last 30 days",
+  monthlyDuration: "Total stream time in last 30 days",
 
   // VTubers{% for v in vtubers %}
   {{v.id}}: "{{v.name}}",{% endfor %}
