--- a/web/src/app/layout/header/header.html
+++ b/web/src/app/layout/header/header.html
@@ -20,6 +20,7 @@
     <button mat-menu-item (click)="selectLanguage('en')">English</button>
     <button mat-menu-item (click)="selectLanguage('ms')">Melayu</button>
     <button mat-menu-item (click)="selectLanguage('zh')">中文</button>
+    <button mat-menu-item (click)="selectLanguage('es')">Español</button>
   </mat-menu>
   <button
     mat-icon-button
