--- a/web/src/app/layout/sidenav/sidenav.html
+++ b/web/src/app/layout/sidenav/sidenav.html
@@ -60,10 +60,10 @@
     </a>
     <a
       class="link"
-      href="https://github.com/PoiScript/HoloStats/commit/{{ commitHash }}"
+      href="https://github.com/PoiScript/HoloStats"
       target="_blank"
     >
-      Commit: {{ commitHash }}
+      GitHub
     </a>
   </div>
   <div class="copyright">&copy; 2019-2021 PoiScript</div>
