--- a/web/src/app/pages/streams-detail/streams-detail.html
+++ b/web/src/app/pages/streams-detail/streams-detail.html
@@ -1,4 +1,4 @@
-<div class="streams-detail">
+<div class="mx-auto max-w-960">
   <ng-container *ngIf="!loading; else shimmer">
     <hs-stream-summary [stream]="stream"></hs-stream-summary>
 
